--- a/NLPexp.ipynb
+++ b/NLPexp.ipynb
@@ -6,7 +6,7 @@
       "name": "NLPexp",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCEuI/qVOnlc4xt0ShbS8p",
+      "authorship_tag": "ABX9TyOSEBfW80hKUguUlnZXIzE4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Experiment 2\n",
         "from polyglot.text import Text, Word\n",
         "# from polyglot.downloader import downloader\n",
         "# downloader.download(\"morph2.en\")\n",
@@ -140,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQuQZotCVZjH",
-        "outputId": "f207ee2b-a1ce-434c-b789-45e455c05295"
+        "outputId": "018e348d-4d01-4e8d-9669-395653bddfae"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
