--- a/NLPexp.ipynb
+++ b/NLPexp.ipynb
@@ -6,7 +6,7 @@
       "name": "NLPexp",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBDJzdz350B9XUvdvssgFD",
+      "authorship_tag": "ABX9TyPc01F+7cAwKavfpePbZ8EO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,21 +74,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 374
         },
         "id": "gQuQZotCVZjH",
-        "outputId": "018e348d-4d01-4e8d-9669-395653bddfae"
+        "outputId": "cbd8d1be-dfe9-491a-a518-1291accbf85f"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "settlement          ['settle', 'ment']\n",
-            "carelessness        ['care', 'less', 'ness']\n",
-            "almighty            ['al', 'mighty']\n"
-          ]
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-d855bc4b4514>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Experiment 2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpolyglot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mText\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWord\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# from polyglot.downloader import downloader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# downloader.download(\"morph2.en\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"settlement\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"carelessness\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"almighty\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'polyglot'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
         }
       ]
     },
@@ -177,13 +191,213 @@
         "id": "Lhvu_g21QRh_",
         "outputId": "cdac77b5-fd75-4aec-a78a-9b54419ef755"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "(S (NP (Det the) (N dogs)) (VP (V cried)))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('book')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y2THJ5Ai2tbn",
+        "outputId": "61d3faa9-d5ac-4343-c939-634dd63ef6da"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[nltk_data] Downloading collection 'book'\n",
+            "[nltk_data]    | \n",
+            "[nltk_data]    | Downloading package abc to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/abc.zip.\n",
+            "[nltk_data]    | Downloading package brown to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/brown.zip.\n",
+            "[nltk_data]    | Downloading package chat80 to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/chat80.zip.\n",
+            "[nltk_data]    | Downloading package cmudict to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/cmudict.zip.\n",
+            "[nltk_data]    | Downloading package conll2000 to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/conll2000.zip.\n",
+            "[nltk_data]    | Downloading package conll2002 to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/conll2002.zip.\n",
+            "[nltk_data]    | Downloading package dependency_treebank to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/dependency_treebank.zip.\n",
+            "[nltk_data]    | Downloading package genesis to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/genesis.zip.\n",
+            "[nltk_data]    | Downloading package gutenberg to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/gutenberg.zip.\n",
+            "[nltk_data]    | Downloading package ieer to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/ieer.zip.\n",
+            "[nltk_data]    | Downloading package inaugural to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/inaugural.zip.\n",
+            "[nltk_data]    | Downloading package movie_reviews to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/movie_reviews.zip.\n",
+            "[nltk_data]    | Downloading package nps_chat to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/nps_chat.zip.\n",
+            "[nltk_data]    | Downloading package names to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/names.zip.\n",
+            "[nltk_data]    | Downloading package ppattach to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/ppattach.zip.\n",
+            "[nltk_data]    | Downloading package reuters to /root/nltk_data...\n",
+            "[nltk_data]    | Downloading package senseval to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/senseval.zip.\n",
+            "[nltk_data]    | Downloading package state_union to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/state_union.zip.\n",
+            "[nltk_data]    | Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]    | Downloading package swadesh to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/swadesh.zip.\n",
+            "[nltk_data]    | Downloading package timit to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/timit.zip.\n",
+            "[nltk_data]    | Downloading package treebank to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/treebank.zip.\n",
+            "[nltk_data]    | Downloading package toolbox to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/toolbox.zip.\n",
+            "[nltk_data]    | Downloading package udhr to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/udhr.zip.\n",
+            "[nltk_data]    | Downloading package udhr2 to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/udhr2.zip.\n",
+            "[nltk_data]    | Downloading package unicode_samples to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/unicode_samples.zip.\n",
+            "[nltk_data]    | Downloading package webtext to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/webtext.zip.\n",
+            "[nltk_data]    | Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/wordnet.zip.\n",
+            "[nltk_data]    | Downloading package wordnet_ic to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/wordnet_ic.zip.\n",
+            "[nltk_data]    | Downloading package words to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/words.zip.\n",
+            "[nltk_data]    | Downloading package maxent_treebank_pos_tagger to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping taggers/maxent_treebank_pos_tagger.zip.\n",
+            "[nltk_data]    | Downloading package maxent_ne_chunker to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping chunkers/maxent_ne_chunker.zip.\n",
+            "[nltk_data]    | Downloading package universal_tagset to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping taggers/universal_tagset.zip.\n",
+            "[nltk_data]    | Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]    | Downloading package book_grammars to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping grammars/book_grammars.zip.\n",
+            "[nltk_data]    | Downloading package city_database to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora/city_database.zip.\n",
+            "[nltk_data]    | Downloading package tagsets to /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping help/tagsets.zip.\n",
+            "[nltk_data]    | Downloading package panlex_swadesh to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    | Downloading package averaged_perceptron_tagger to\n",
+            "[nltk_data]    |     /root/nltk_data...\n",
+            "[nltk_data]    |   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+            "[nltk_data]    | \n",
+            "[nltk_data]  Done downloading collection book\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Experiment 5\n",
+        "from nltk import pos_tag\n",
+        "from nltk import RegexpParser\n",
+        "\n",
+        "text =\"learn php from guru99 and make study easy\".split()\n",
+        "print(\"After Split:\",text)\n",
+        "tokens_tag = pos_tag(text)\n",
+        "print(\"After Token:\",tokens_tag)\n",
+        "patterns= \"\"\"mychunk:{<NN.?>*<VBD.?>*<JJ.?>*<CC>?}\"\"\"\n",
+        "chunker = RegexpParser(patterns)\n",
+        "print(\"After Regex:\",chunker)\n",
+        "output = chunker.parse(tokens_tag)\n",
+        "print(\"After Chunking\",output)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dUGXQg9g1UGA",
+        "outputId": "8cae2d5f-b948-4554-ea12-423c1f5702d5"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After Split: ['learn', 'php', 'from', 'guru99', 'and', 'make', 'study', 'easy']\n",
+            "After Token: [('learn', 'JJ'), ('php', 'NN'), ('from', 'IN'), ('guru99', 'NN'), ('and', 'CC'), ('make', 'VB'), ('study', 'NN'), ('easy', 'JJ')]\n",
+            "After Regex: chunk.RegexpParser with 1 stages:\n",
+            "RegexpChunkParser with 1 rules:\n",
+            "       <ChunkRule: '<NN.?>*<VBD.?>*<JJ.?>*<CC>?'>\n",
+            "After Chunking (S\n",
+            "  (mychunk learn/JJ)\n",
+            "  (mychunk php/NN)\n",
+            "  from/IN\n",
+            "  (mychunk guru99/NN and/CC)\n",
+            "  make/VB\n",
+            "  (mychunk study/NN easy/JJ))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Experiment No.6\n",
+        "import spacy\n",
+        "nlp=spacy.load('en_core_web_sm')\n",
+        "sentence=\"Wall's Street Collapse raise spectres of the 1987 market crash.The Stock Market shrugged off the economic gloom and rose by 1.5%\"\n",
+        "doc=nlp(sentence)\n",
+        "\n",
+        "for ent in doc.ents:\n",
+        "  print(ent.text,ent.start_char,ent.end_char,ent.label_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ys0sHOC62LSd",
+        "outputId": "f918da94-559a-4849-edc8-26e24e7ea118"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1987 45 49 DATE\n",
+            "1.5% 124 128 PERCENT\n"
           ]
         }
       ]
